# unlimited_rpg

./: .gitignore  CMakeLists.txt  README.md  log.txt  unlimited_rpg.sln  unlimited_rpg.vcxproj  unlimited_rpg.vcxproj.filters
header/: actor.hpp  ai_tags.hpp  code_definitions.hpp  combatant.hpp  command_parser.hpp  command_set.hpp  entity.hpp  factory.hpp  game_data.hpp  game_state.hpp  game_state_main_menu.hpp  game_state_manager.hpp  game_state_play.hpp  logger.hpp  npc.hpp  platform.hpp  player.hpp  room.hpp  screen_print.hpp  utility_functions.hpp  word_list.hpp
res/entities/actors/: damnun_the_dalmation.txt  healer.txt  orc.txt  townee.txt
res/rooms/: room_gameplay_core.txt  room_healer_hut.txt  room_main_menu.txt  room_orc_den.txt
src/: command_parser.cpp  factory.cpp  game_data.cpp  game_state.cpp  game_state_manager.cpp  logger.cpp  main.cpp  npc.cpp  room.cpp  screen_print.cpp
